<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SystemUI</string>
    <string name="app_label_systemui" translatable="false">HsSystemUI</string>
    <string name="clock_am">AM</string>
    <string name="clock_pm">PM</string>
    <string name="text_recent_apps_no_running">No running applications recently</string>
    <string name="text_hvac_temp_slider_bar_sync">SYNC</string>
    <string name="text_toast_not_available">The function is not available</string>
    <string name="text_tips_not_register">The listener has not been registered, the data observer object is empty</string>
    <string name="text_unknown_device">Unknown Device </string>
    <string name="text_system_dialog_button_cancel">Cancel</string>
    <string name="text_system_dialog_button_ok">OK</string>
    <string name="text_system_dialog_button_continue">Continue</string>
    <string name="text_system_reboot_title">Do you want to reboot the system?</string>
    <string name="text_system_reboot_button_cancel">Cancel</string>
    <string name="text_system_reboot_button_ok">Continue</string>
    <string name="text_disclaimer_tips_confirm">OK</string>
    <string name="text_disclaimer_language_title">Please select a language</string>
    <string name="text_disclaimer_language_zh">中文</string>
    <string name="text_disclaimer_language_en">English</string>
    <string name="text_apps_list_is_full">A shortcut application has been added. Delete one and add it again</string>
    <string name="text_loading_not_operation">Unable to operate while setting</string>
    <string name="text_car_play_app_disable_tips">Are you sure jump to the device list page?</string>
    <string name="text_car_ux_res_vehicle_state1">When the HDS is connected, you  cannot operate Vehicle Settings</string>
    <string name="text_car_ux_res_vehicle_state2">To operate the settings, vehicle power must be turned on</string>
    <string name="text_car_ux_res_vehicle_state3">To change the Settings, you must be in Park (autos) or the parking brake on (manuals) &#038; the vehicle power on</string>
    <string name="text_car_ux_res_vehicle_state4">This function is not available while the vehicle is in motion</string>
    <string name="text_wireless_charge_title">Charging Status</string>
    <string name="text_wireless_charge_left">Left</string>
    <string name="text_wireless_charge_right">Right</string>
    <string name="text_wireless_charge_charging">Charging</string>
    <string name="text_wireless_charge_standby">Standby</string>
    <string name="text_wireless_charge_hardware_failure">Hardware Failure</string>
    <string name="text_wireless_charge_abnormal_termination">Abnormal Termination</string>
    <string name="text_wireless_charge_tips_hardware_failure">Wireless Charging Hardware Failure Detected</string>
    <string name="text_wireless_charge_tips_hardware_failure_left_right">Wireless charging hardware failure on both sides,unable to charge.</string>
    <string name="text_wireless_charge_tips_hardware_failure_left">Left wireless charging hardware failure ,unable to charge.</string>
    <string name="text_wireless_charge_tips_hardware_failure_right">Right wireless charging hardware failure ,unable to charge.</string>
    <string name="text_wireless_charge_tips_charging_stopped">Wireless Charging Stopped</string>
    <string name="text_wireless_charge_tips_any_foreign_objects">Please remove any foreign objects from the charging slots on both sides before recharging.</string>
    <string name="text_wireless_charge_tips_any_foreign_objects_left">Please remove any foreign objects from the left charging slot before attempting to charge again.</string>
    <string name="text_wireless_charge_tips_any_foreign_objects_right">Please remove any foreign objects from the right charging slot before attempting to charge again.</string>
    <string name="text_wireless_charge_tips_caution">CAUTION</string>
    <string name="text_wireless_charge_tips_caution_contents">Metal objects between charge pad and device to be charged will get hot and can burn you. Remove foreign objects from charge pad before charging device.</string>
    <string name="text_shortcut_volume_settings">Volume adjustment</string>
    <string name="text_shortcut_volume_media">Media</string>
    <string name="text_shortcut_volume_navi">Navi</string>
    <string name="text_shortcut_volume_call">Call</string>
    <string name="text_shortcut_volume_vr">Voice</string>
    <string name="text_header_audio_source">Audio Source</string>
    <string name="text_audio_source_title">Audio Source Change</string>
    <string name="text_audio_source_bt">Bluetooth Headerio</string>
    <string name="text_audio_source_usb">USB</string>
    <string name="text_audio_source_ipod">iPod</string>
    <string name="text_audio_source_apple_carplay">Apple Carplay</string>
    <string name="text_audio_source_car_life">Baidu CarLife+</string>
    <string name="text_audio_source_hi_car">HUAWEI HiCar</string>
    <string name="text_audio_source_funn">Funn Audio</string>
    <string name="text_media_info_default">Media ID3 info</string>
    <string name="text_media_info_no_device_connected">No Device Connected</string>
    <string name="text_media_meta_data_id3_title">Title</string>
    <string name="text_media_meta_data_id3_artist">Artist</string>
    <string name="text_system_status_title">System Status</string>
    <string name="text_system_status_unread_message">Unread Message</string>
    <string name="text_system_status_item_open">Open</string>
    <string name="text_system_status_item_remove">Remove</string>
    <string name="text_system_status_car_location">Vehicle GPS enabled</string>
    <string name="text_system_status_car_mic">Vehicle Microphone on</string>
    <string name="text_system_status_car_camera">Vehicle Camera turned on</string>
    <string name="text_system_status_dms_sta_a">DMS and the Driver state is normal</string>
    <string name="text_system_status_dms_sta_b">DMS error</string>
    <string name="text_system_status_dms_sta_c">DMS is closed</string>
    <string name="text_system_status_dms_sta_d">DMS is closed</string>
    <string name="text_system_status_dms_sta_e">DMS operating normally, abnormal driver behavior</string>
    <string name="text_system_status_dms_sta_f">Part of DMS functions were closed</string>
    <string name="text_system_status_crs_uninstall">Bluetooth seat not properly installed, please check port</string>
    <string name="text_system_status_cpd_normal">Child Detection System Normal</string>
    <string name="text_system_status_cpd_off">Child Detection System Disabled</string>
    <string name="text_system_status_cpd_error">Child Detection System Fault</string>
    <string name="text_system_status_cpd_delay_alarm">Child System Delay Alert</string>
    <string name="text_system_status_etc_not_activated">ETC is not activated</string>
    <string name="text_system_status_etc_app">Please turn on ETC in App</string>
    <string name="text_system_status_etc_mini_program">ETC is OFF. Please contact vehicle owner to turn on the function in ETC Mini-Program </string>
    <string name="text_system_status_etc_error">ETC error</string>
    <string name="text_system_status_etc_normal">ETC is normal</string>
    <string name="text_ctm_system_off">OFF</string>
    <string name="text_ctm_system_unavailable">Unavailable</string>
    <string name="text_ctm_system_check_system">Check System</string>
    <string name="text_system_status_battery_no_info">No battery information</string>
    <string name="text_system_status_battery_unknown">Battery level for unknown device</string>
    <string name="text_system_status_battery_low">Phone\'s battery is critically low</string>
    <string name="text_system_status_battery_phone">Battery level for <xliff:g id="PHONE_NAME">%1$s</xliff:g></string>
    <string name="text_system_status_phone_sign">Phone\'s Signal strength</string>
    <string name="text_system_status_phone_sign_name">Signal strength for <xliff:g id="PHONE_NAME">%1$s</xliff:g></string>
    <string name="text_system_status_phone_no_sign">Signal strength unavailable</string>
    <string name="text_system_status_bt_connected"><xliff:g id="DEVICE_NAME">%1$s</xliff:g> is connected</string>
    <string name="text_system_status_wireless_charging">Wireless charging is active</string>
    <string name="text_system_status_usb_device"><xliff:g id="DEVICE_NAME">%1$s</xliff:g> is connected</string>
    <string name="text_system_status_usb_unknown">USB device is connected</string>
    <string name="text_system_status_wifi_ap_no_device">No devices are connected to WI-FI AP</string>
    <string name="text_system_status_wifi_ap_device_1"><xliff:g id="DEVICE_NAME">%1$s</xliff:g> is connected</string>
    <string name="text_system_status_wifi_ap_device_count"><xliff:g id="DEVICE_COUNT">%1$s</xliff:g> devices are connected to Wi-Fi AP</string>
    <string name="text_system_status_wifi_sta_connected">Connected <xliff:g id="DEVICE_NAME">%1$s</xliff:g></string>
    <string name="text_system_status_mobile_net_normal">Normal mobile communications network</string>
    <string name="text_system_status_mobile_net_no_signal">No mobile network signal</string>
    <string name="text_system_status_ota_info_0_new_version">New software version detected</string>
    <string name="text_system_status_ota_info_1_downloading">Downloading software…</string>
    <string name="text_system_status_ota_info_2_download_paused">Download paused</string>
    <string name="text_system_status_ota_info_3_available">System update available</string>
    <string name="text_system_status_ota_info_4_installing">Installing software…</string>
    <string name="text_system_status_ota_info_5_ready">System update ready</string>
    <string name="text_system_status_ota_info_6_needed">Update needed, contact dealer</string>
    <string name="text_system_status_ota_info_7_error">Update error, contact dealer</string>
    <string name="text_system_status_ota_info_8_connecting">Connecting network…</string>
    <string name="text_system_status_gps">GPS not detected</string>
    <string name="text_hvac_tips_power_ig_off">Please turn on the vehicle power  to use the Climate Control</string>
    <string name="text_hvac_tips_ac_timeout_active">Air conditioning system temporarily unavailable</string>
    <string name="text_hvac_aq_value_none">−−</string>
    <string name="text_hvac_aq_outside">Outside</string>
    <string name="text_hvac_aq_pm25">PM2.5</string>
    <string name="text_hvac_aq_outside_value">157</string>
    <string name="text_hvac_aq_location">HanYang</string>
    <string name="text_hvac_aq_inside">Inside</string>
    <string name="text_hvac_aq_pm25_value">77</string>
    <string name="text_hvac_aq_pm25_level_loading">Loading...</string>
    <string name="text_hvac_aq_pm25_level_0">Good</string>
    <string name="text_hvac_aq_pm25_level_1">Moderate</string>
    <string name="text_hvac_aq_pm25_level_2">Unhealthy for Sensitive Groups</string>
    <string name="text_hvac_aq_pm25_level_3">Unhealthy</string>
    <string name="text_hvac_aq_pm25_level_4">Very Unhealthy</string>
    <string name="text_hvac_aq_pm25_level_5">Hazardous</string>
    <string name="text_ac_mode_fault">Fault display mode</string>
    <string name="text_ac_mode_sensor">Sensor value display mode</string>
    <string name="text_ac_mode_custom">Custom display mode</string>
    <string name="driving_mode">Driving Mode</string>
    <string name="eco">ECO</string>
    <string name="normal">NORMAL</string>
    <string name="sport">SPORT</string>
    <string name="snow">SNOW</string>
    <string name="mud">MUD</string>
    <string name="text_quick_control">Quick Control</string>
    <string name="text_quick_control_edit_complete">Complete</string>
    <string name="text_quick_control_edit_remake">Remake</string>
    <string name="text_quick_control_edit_cancel">Cancel</string>
</resources>